--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -1,92 +1,67 @@
 /* src/components/Landing/Landing.module.css */
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  
-  .container section {
-    padding: 0px 22px;
-  }
-  
-  .container > section {
     width: 100%;
     display: flex;
     align-items: center;
-    flex-direction: column;
-  }
-  
-  .container section > img {
-    width: 25%;
-    min-width: 460px;
-    margin-bottom: 80px;
-  }
-  
-  .splash {
-    height: 91vh;
     justify-content: center;
+    flex-direction: column;
+    padding-bottom: 30px;
   }
-  
-  .about {
-    height: 430px;
-    background-color: white;
-    
-    -moz-box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.15);
 
-    box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.15);
-  }
-  
-  .testimonial {
-    height: 80vh;
-  }
-  
-  .about header {
-    margin: 0;
-    width: 100%;
+  .header {
+    height: auto;
+    justify-content:flex-end; 
     display: flex;
-    padding: 50px 0px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container section {
+    padding: 20px 10px;
+  }
+  
+  .container > section.about {
+    width: 100%;
+    height: auto;
+    display: flex;
+    height: 300px;
+    padding:10px 150px;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
+   
+    /* background-color: rgb(237, 136, 136); */
+    /* box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.15); */
   }
   
-  .about article {
-    width: 100%;
-    max-width: 1000px;
-  }
-  
-  .about article p {
+  .about h3, .about p {
     margin: 0;
-    width: 100%;
+    padding: 10px;
     font-size: 16px;
-    line-height: 28px;
   }
   
-  .container section > header * {
-    margin: 0px;
-    font-weight: 600;
+
+  .testimonial {
+    width: 100vw; 
+    height: auto; 
+    /* background-color: #bc002f;  */
+    padding: 20px 0; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    box-sizing: border-box; 
   }
-  
-  .container section > header h1 {
-    margin: 5px;
-    font-size: 36px;
-    letter-spacing: 2px;
-  }
-  
-  .container section > header h3 {
-    font-size: 16px;
-    color: #00a0df;
-  }
-  
+
   .testimonial > header {
     width: 100%;
-    padding: 50px 0px;
+    padding: 10px 0px;
     display: flex;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     flex-direction: column;
+    font-size: 18px;
   }
   
   .testimonial article {
@@ -95,7 +70,7 @@
     max-width: 525px;
     border-radius: 5px;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
     flex-direction: column;
     background-color: #f2f5f7;
     padding: 12px 28px 14px 28px;
@@ -107,22 +82,6 @@
     box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.25);
   }
   
-  .container article header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .container footer {
-    margin: 0;
-    width: 100%;
-    padding: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
   
   .testimonial article * {
     margin: 5px;
@@ -140,20 +99,28 @@
     line-height: 24px;
   }
   
-  .testimonial footer img {
-    height: 20px;
+
+  .joinNowButton {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #bc002f;
+    color: #ffffff;
+    border: none; 
+    border-radius: 5px; 
+    text-align: center;
+    text-decoration: none; 
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer; 
+    transition: background-color 0.3s ease; 
   }
   
-  .footer {
-    padding: 50px 0px;
-    display: flex;
-    background: white;
-    background: #131415;
-    justify-content: center;
-    color: rgb(220, 220, 220);
-    border-top: 1px solid rgb(220, 220, 220);
+  .joinNowButton:hover {
+    background-color: #cda780;
+    color: #ffffff;
   }
-  
+
+
   @media only screen and (max-width: 1200px) {
     .testimonial {
       height: 680px;
@@ -184,24 +151,6 @@
     }
     .testimonial {
       height: 700px;
-    }
-  }
-  
-  @media only screen and (max-width: 414px) {
-    .about {
-      height: 660px;
-    }
-    .container section > img {
-      min-width: 340px;
-    }
-  }
-  
-  @media only screen and (max-width: 300px) {
-    .about {
-      height: 800px;
-    }
-    .container section > img {
-      min-width: 340px;
     }
   }
   
