--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,18 @@ html, body {
   margin: 0;
   height: 100%;
   overflow: hidden;
-  background-color: #f2f4f8;
+  background-color: #e1e1e1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
+  Helvetica, Arial, "Lucida Grande", sans-serif;
+/* 
   background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2385cfee' fill-opacity='0.25'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 
   --primary: #00a0df;
   --background: #f2f4f8;
   --card-background: white;
-  --border: rgb(220, 220, 220);
+  --border: rgb(220, 220, 220); */
 }
 
 #root {
@@ -38,6 +40,7 @@ h1, h3 { margin: 7px 0px 14px 0px; }
 h1 {
   font-size: 28px;
   font-weight: 600;
+  
 }
 
 h3 {
@@ -66,6 +69,11 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  cursor: pointer;
+  color: rgb(154, 16, 16);
+}
+
 form {
   width: 100%;
   display: flex;
@@ -80,14 +88,17 @@ form {
   box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
 }
 
+button {
+  font-style: bold;
+  background-color: #bc002f;
+  color:#ffffff;
+}
+
 button:hover {
   cursor: pointer;
-  background-color: rgb(222, 146, 32);
+  background-color: #cda780;
   
 }
 
-a:hover {
-  cursor: pointer;
-  color: rgb(140, 103, 47);
-}
+
 
