update index service and sign in component styling

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -11,7 +11,7 @@
     padding-right: 8px;
     align-items: center;
     background: #001025d9;
-    border-bottom: 1px solid rgb(200, 200, 200);
+    border-bottom: 1px solid  #001025d9;
     font-size: 10px;
   }
 
