--- a/src/components/SigninForm/SigninForm.module.css
+++ b/src/components/SigninForm/SigninForm.module.css
@@ -1,92 +1,174 @@
 .container {
-    height: 100%;
-    display: flex;
-    overflow: hidden;
-    align-items: center;
-  }
-  
-  .container p {
-    margin: 0;
-    padding: 0px 0 10px;
-  }
-  
-  .container img {
-    width: 65%;
-    max-width: 500px;
-  }
-  
-  .container section {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    padding: 28px 21px;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .container section:first-child {
-    background-color: #fdfeff;
-  }
-  
-  .container input {
-    margin: 7px 0px 14px 0px;
-  }
-  
-  .container input,
-  button {
+  height: 100%;
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  background-color: #001025;
+}
+
+.header {
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-bottom: 30px;
+}
+
+.container p {
+  text-align: center;
+}
+
+.message p {
+  color: white;
+
+  text-align: center;
+  opacity: 1;
+  margin-bottom: 20px;
+}
+
+
+/* .signin-link {
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.signin-link:hover {
+  color: rgb(154, 16, 16);
+} */
+
+/* //--------------------form--------------------------------------------\\ */
+form {
+  width: 400px;
+  height: 340px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 21px 21px 28px 21px;
+  border-radius: 5px;
+  border: 1px solid rgb(220, 220, 220);
+  -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+}
+
+.container input {
+  margin: 7px 0px 7px 0px;
+  background-color: #ffffff;
+}
+
+.container input, button {
     width: 100%;
-    padding: 14px;
+    padding: 10px 15px;
     font-size: 14px;
     border-radius: 5px;
     border: 1px solid rgb(220, 220, 220);
-  }
-  
-  .container div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .container label {
-    font-weight: 600;
-    margin: 7px 0px 14px 0px;
-  }
-  
-  .container button {
-    color: white;
-    font-weight: 600;
-    background: #00a0df;
-    margin: 21px 0px 0px 0px;
-  }
-  
-  .container a {
-    border: none;
-    font-size: 14px;
-    background: none;
-    font-weight: 500;
-    margin-top: 14px;
-    text-align: center;
-    color: rgb(200, 200, 200);
-  }
-  
-  input:focus {
-    outline: none;
-    border: 1px solid #00a0df;
-  }
-  
-  @media only screen and (max-width: 912px) {
-    .container section {
-      width: 100%;
-      justify-content: flex-start;
-    }
-    .container section:first-child {
-      display: none;
-    }
-    .container form {
-      min-width: 100%;
-    }
-  }
+}
 
+/* .container input:focus {
+  outline: none;
+  border: 1px solid #00a0df;
+  box-shadow: 0px 0px 5px rgba(0, 160, 223, 0.5);
+} */
+
+.container div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container label {
+  font-weight: 600;
+  font-size: 14px; 
+  color: #001025;
+  margin-bottom: 1px; 
   
-  
+}
+
+.container label::after {
+  content: "*"; 
+  color: #ff4d4f;
+  margin-left: 5px;
+  font-size: 12px;
+}
+
+/* //----------------------------------------------------------------\\ */
+
+.message {
+  color: white;
+  opacity: 1;
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .container section {
+    width: 100%;
+    padding: 20px;
+  }
+}
+
+
+/* .container button {
+  color: white;
+  font-weight: 600;
+  background: #00a0df;
+  margin: 10px 0px 0px 0px;
+} */
+
+
+  /* border-radius: 5px;
+  flex-direction: column;
+  background-color: white;
+  padding: 21px 21px 28px 21px;
+  border: 1px solid rgb(220, 220, 220);
+  box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+}
+.container input {
+  margin: 7px 0px 14px 0px;
+}
+
+.container input,
+button {
+  width: 100%;
+  padding: 14px;
+  font-size: 14px;
+  border-radius: 5px;
+  border: 1px solid rgb(220, 220, 220);
+}
+
+.container div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container label {
+  font-weight: 600;
+  margin: 7px 0px 14px 0px;
+}
+
+.container button {
+  color: white;
+  font-weight: 600;
+  background: #00a0df;
+  margin: 21px 0px 0px 0px;
+}
+
+.container a {
+  border: none;
+  font-size: 14px;
+  background: none;
+  font-weight: 500;
+  margin-top: 14px;
+  text-align: center;
+  color: rgb(200, 200, 200);
+}
+
+input:focus {
+  outline: none;
+  border: 1px solid #00a0df;
+} */
