--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,35 +1,127 @@
 .container {
   height: 100%;
   display: flex;
+  flex-direction:column;
   align-items: center;
+  justify-content: center;
+  background-color: #001025;
+}
+
+
+.header {
+  display: flex;
+  flex-direction: center;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-bottom: 20px;
 }
 
 .container p {
-  margin: 0;
-  padding: 0px 0 10px;
+  text-align: center;
 }
-  
-.container section {
-  width: 50%;
-  height: 100%;
+
+.message p {
+  color: white;
+
+  text-align: center;
+  opacity: 1;
+  margin-bottom: 20px;
+}
+
+/* //--------------------form--------------------------------------------\\ */
+/* .signupForm {
+  width: 400px ;
   display: flex;
-  padding: 28px 21px;
-  align-items: center;
+  flex-direction: column;
+  background-color: rgb(31, 16, 16);
+  padding: 21px 21px 28px 21px;
+  border-radius: 5px;
+  border: 1px solid rgb(220, 220, 220);
+  -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+} */
+
+.container input {
+  margin: 7px 0px 7px 0px;
+  background-color: #ffffff;
+}
+
+.container input, button {
+    width: 100%;
+    padding: 10px 15px;
+    font-size: 14px;
+    border-radius: 5px;
+    border: 1px solid rgb(220, 220, 220);
+}
+
+.container input:focus {
+  outline: none;
+  border: 1px solid #8b999e;
+  box-shadow: 0px 0px 5px rgba(0, 160, 223, 0.5);
+}
+
+/* .container input:focus {
+  outline: none;
+  border: 1px solid #00a0df;
+  box-shadow: 0px 0px 5px rgba(0, 160, 223, 0.5);
+} */
+
+.container div {
+  width: 100%;
+  display: flex;
   flex-direction: column;
 }
 
-.container section:first-child {
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  background-color: #fdfeff;
+.container label {
+  font-weight: 600;
+  font-size: 14px; 
+  color: #001025;
+  margin-bottom: 1px; 
+  
 }
 
-.container section:nth-child(2) {
-  overflow: scroll;
-  justify-content: center;
+.container label::after {
+  content: "*"; 
+  color: #ff4d4f;
+  margin-left: 5px;
+  font-size: 12px;
 }
 
+/* //----------------------------------------------------------------\\ */
+
+.message {
+  color: white;
+  opacity: 1;
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .container section {
+    width: 100%;
+    padding: 20px;
+  }
+}
+
+
+/* .container button {
+  color: white;
+  font-weight: 600;
+  background: #00a0df;
+  margin: 10px 0px 0px 0px;
+} */
+
+
+  /* border-radius: 5px;
+  flex-direction: column;
+  background-color: white;
+  padding: 21px 21px 28px 21px;
+  border: 1px solid rgb(220, 220, 220);
+  box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+}
 .container input {
   margin: 7px 0px 14px 0px;
 }
@@ -57,7 +149,7 @@ button {
 .container button {
   color: white;
   font-weight: 600;
-  background: #bc002f;
+  background: #00a0df;
   margin: 21px 0px 0px 0px;
 }
 
@@ -73,24 +165,5 @@ button {
 
 input:focus {
   outline: none;
-  border: 1px solid #bc002f;
-}
-
-@media only screen and (max-width: 912px) {
-  .container section {
-    width: 100%;
-  }
-  .container section:first-child {
-    display: none;
-  }
-  .container form {
-    min-width: 100%;
-  }
-}
-
-@media only screen and (max-height: 900px) {
-  .container section:nth-child(2) {
-    justify-content: flex-start;
-  }
-}
-
+  border: 1px solid #00a0df;
+} */
