--- a/src/components/SigninForm/SigninForm.module.css
+++ b/src/components/SigninForm/SigninForm.module.css
@@ -1,10 +1,11 @@
 .container {
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction:column;
   align-items: center;
   justify-content: center;
   background-color: #001025;
+  padding-bottom: 50px; /* Adds space at the bottom */
 }
 
 .header {
@@ -13,6 +14,7 @@
   justify-content: center;
   align-items: center;
   color: white;
+  margin-top: 50px;
   margin-bottom: 30px;
 }
 
@@ -29,6 +31,7 @@
 }
 
 
+
 /* .signin-link {
   color: #ffffff;
   text-decoration: none;
@@ -41,12 +44,13 @@
 
 /* //--------------------form--------------------------------------------\\ */
 form {
-  width: 400px;
-  height: 340px;
+  width: 540px;
+  height: 410px;
   display: flex;
   flex-direction: column;
   background-color: white;
   padding: 21px 21px 28px 21px;
+  
   border-radius: 5px;
   border: 1px solid rgb(220, 220, 220);
   -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
@@ -62,7 +66,7 @@ form {
 .container input, button {
     width: 100%;
     padding: 10px 15px;
-    font-size: 14px;
+    font-size: 17px;
     border-radius: 5px;
     border: 1px solid rgb(220, 220, 220);
 }
@@ -73,17 +77,11 @@ form {
   box-shadow: 0px 0px 5px rgba(0, 160, 223, 0.5);
 }
 
-.container div {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
 .container label {
   font-weight: 600;
-  font-size: 14px; 
+  font-size: 17px; 
   color: #001025;
-  margin-bottom: 1px; 
+  margin: 7px 0px 7px 0px;
   
 }
 
@@ -94,6 +92,13 @@ form {
   font-size: 12px;
 }
 
+.container div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+
 /* //----------------------------------------------------------------\\ */
 
 .message {
@@ -102,6 +107,19 @@ form {
   margin-bottom: 20px;
 }
 
+
+.footer {
+  margin-top: 30px; /* Add space above */
+  padding: 20px 0; /* Space within the footer */
+  background-color: #001025; /* Match the main background color */
+  color: white;
+  text-align: center;
+  font-size: 14px;
+}
+
+
+
+
 @media only screen and (max-width: 600px) {
   .container section {
     width: 100%;
@@ -109,13 +127,13 @@ form {
   }
 }
 
-
-/* .container button {
+/* 
+ .container button {
   color: white;
   font-weight: 600;
   background: #00a0df;
   margin: 10px 0px 0px 0px;
-} */
+}  */
 
 
   /* border-radius: 5px;
