--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,12 +1,12 @@
 .container {
-  height: 100%;
+  min-height: 100vh;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: #001025;
+  padding-bottom: 50px;
 }
-
 
 .header {
   display: flex;
@@ -14,7 +14,8 @@
   justify-content: center;
   align-items: center;
   color: white;
-  margin-bottom: 20px;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .container p {
@@ -23,25 +24,28 @@
 
 .message p {
   color: white;
-
   text-align: center;
   opacity: 1;
-  margin-bottom: 20px;
+  margin-top: 2px;
 }
 
-/* //--------------------form--------------------------------------------\\ */
-/* .signupForm {
-  width: 400px ;
+.signupForm {
+  width: 540px !important;
+  height: 500px;
   display: flex;
   flex-direction: column;
-  background-color: rgb(31, 16, 16);
+  background-color: #ffffff;
   padding: 21px 21px 28px 21px;
   border-radius: 5px;
   border: 1px solid rgb(220, 220, 220);
   -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
-} */
+  margin-top: 20px;
+  /* margin-left: 200px; */
+  
+
+}
 
 .container input {
   margin: 7px 0px 7px 0px;
@@ -51,7 +55,7 @@
 .container input, button {
     width: 100%;
     padding: 10px 15px;
-    font-size: 14px;
+    font-size: 17px;
     border-radius: 5px;
     border: 1px solid rgb(220, 220, 220);
 }
@@ -62,24 +66,12 @@
   box-shadow: 0px 0px 5px rgba(0, 160, 223, 0.5);
 }
 
-/* .container input:focus {
-  outline: none;
-  border: 1px solid #00a0df;
-  box-shadow: 0px 0px 5px rgba(0, 160, 223, 0.5);
-} */
-
-.container div {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
 .container label {
   font-weight: 600;
-  font-size: 14px; 
+  font-size: 17px; 
   color: #001025;
   margin-bottom: 1px; 
-  
+  margin: 7px 0px 7px 0px;
 }
 
 .container label::after {
@@ -89,50 +81,14 @@
   font-size: 12px;
 }
 
-/* //----------------------------------------------------------------\\ */
-
-.message {
+.footer {
   color: white;
-  opacity: 1;
-  margin-bottom: 20px;
-}
-
-@media only screen and (max-width: 600px) {
-  .container section {
-    width: 100%;
-    padding: 20px;
-  }
-}
-
-
-/* .container button {
-  color: white;
-  font-weight: 600;
-  background: #00a0df;
-  margin: 10px 0px 0px 0px;
-} */
-
-
-  /* border-radius: 5px;
-  flex-direction: column;
-  background-color: white;
-  padding: 21px 21px 28px 21px;
-  border: 1px solid rgb(220, 220, 220);
-  box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
-  -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
-  -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
-}
-.container input {
-  margin: 7px 0px 14px 0px;
-}
-
-.container input,
-button {
-  width: 100%;
-  padding: 14px;
+  margin-top: auto; /* Push the footer to the bottom */
+  text-align: center;
+  padding: 30px 0px 20px 0px;
   font-size: 14px;
-  border-radius: 5px;
-  border: 1px solid rgb(220, 220, 220);
+  background-color: #001025; /* Same background color to blend in */
+  width: 100%; /* Ensure it spans the width of the page */
 }
 
 .container div {
@@ -141,29 +97,14 @@ button {
   flex-direction: column;
 }
 
-.container label {
-  font-weight: 600;
-  margin: 7px 0px 14px 0px;
-}
+@media (max-width: 600px) {
+  .signupForm {
+    width: 90%; /* Form adjusts to fit smaller screens */
+    margin-top: 15px;
+  }
 
-.container button {
-  color: white;
-  font-weight: 600;
-  background: #00a0df;
-  margin: 21px 0px 0px 0px;
+  .header {
+    margin-top: 30px; /* Reduce margin for smaller screens */
+    font-size: 18px; /* Adjust header font size */
+  }
 }
-
-.container a {
-  border: none;
-  font-size: 14px;
-  background: none;
-  font-weight: 500;
-  margin-top: 14px;
-  text-align: center;
-  color: rgb(200, 200, 200);
-}
-
-input:focus {
-  outline: none;
-  border: 1px solid #00a0df;
-} */
