style base spotForm

--- a/src/components/SigninForm/SigninForm.module.css
+++ b/src/components/SigninForm/SigninForm.module.css
@@ -43,8 +43,8 @@
 } */
 
 /* //--------------------form--------------------------------------------\\ */
-form {
-  width: 540px;
+.signinForm {
+  width: 500px;
   height: 410px;
   display: flex;
   flex-direction: column;
