--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -30,8 +30,8 @@
 }
 
 .signupForm {
-  width: 540px !important;
-  height: 500px;
+  width: 450px !important;
+  height: 530px;
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
@@ -42,9 +42,6 @@
   -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   margin-top: 20px;
-  /* margin-left: 200px; */
-  
-
 }
 
 .container input {
@@ -83,12 +80,12 @@
 
 .footer {
   color: white;
-  margin-top: auto; /* Push the footer to the bottom */
+  margin-top: auto; 
   text-align: center;
   padding: 30px 0px 20px 0px;
   font-size: 14px;
-  background-color: #001025; /* Same background color to blend in */
-  width: 100%; /* Ensure it spans the width of the page */
+  background-color: #001025; 
+  width: 100%; 
 }
 
 .container div {
@@ -99,12 +96,12 @@
 
 @media (max-width: 600px) {
   .signupForm {
-    width: 90%; /* Form adjusts to fit smaller screens */
+    width: 90%; 
     margin-top: 15px;
   }
 
   .header {
-    margin-top: 30px; /* Reduce margin for smaller screens */
-    font-size: 18px; /* Adjust header font size */
+    margin-top: 30px; 
+    font-size: 18px; 
   }
 }
