--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,19 +1,18 @@
 /* src/components/NavBar/NavBar.module.css */
-
 .container {
     top: 0; 
-    z-index: 1;
     width: 100%;
-    height: 55px;
+    height: 65px;
+    /* height: auto; */
+    /* min-height: 75px; */
     display: flex;
-    z-index: 1;
     position: fixed; 
     padding: 14px 21px;
     padding-right: 8px;
     align-items: center;
     background: #001025d9;
     border-bottom: 1px solid  #001025d9;
-    font-size: 12px;
+    font-size: 9px;
   }
 
   .container a:hover {
@@ -21,8 +20,13 @@
   }
 
   .container img {
-    width: 50px;
-  }
+    max-width: 155px; /* Adjust to the maximum size you want */
+    height: 70px; /* Adjust to the maximum size you want */
+    object-fit: contain; /* Maintain aspect ratio */
+    margin-top: 29px;
+   padding-top: 0px;
+
+}
   
   .container ul {
     margin: 0;
@@ -36,7 +40,7 @@
   }
   
   .container li {
-    margin-left: 25px;
+    margin-left: 10px;
     margin-right: 5px;
     text-align: right;
   }
@@ -45,16 +49,7 @@
      color: #ffffff;
      font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
   Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 19px;
-  }
-
-  @media only screen and (max-width: 414px) {
-    .container ul {
-      padding-left: 0px;
-    }
-    .container li {
-      font-size: 20px;
-    }
+  font-size: 18px;
   }
 
   .joinButton {
@@ -75,4 +70,11 @@
     color:rgb(154, 16, 16);
   }
 
-  
+
+
+@media only screen and (max-width: 414px) {
+    .container img {
+        width: 50px; 
+        height: auto; 
+    }
+}
