--- a/src/components/SpotList/SpotList.module.css
+++ b/src/components/SpotList/SpotList.module.css
@@ -1,91 +1,45 @@
-/* List styling */
-
 .container {
-    gap: 14px;
-    width: 100%;
-    display: grid;
-    padding: 21px;
-    grid-template-columns: repeat(1, 1fr);
-  }
-  
-  /* Media queries */
-  
-  @media only screen and (min-width: 900px) {
-    .container {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-  
-  @media only screen and (min-width: 1200px) {
-    .container {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  }
-  
-  @media only screen and (min-width: 1500px) {
-    .container {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
-  
-  /* Hoot card styling */
-  
-  .container article {
-    width: 100%;
-    height: 220px;
-    padding: 14px 21px;
-    border-radius: 5px;
-    border: 1px solid var(--border);
-    background-color: var(--card-background);
- 
-    -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
-    -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
-    box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
-    
-  }
-  
-  .container article header {
-    margin-bottom: 14px;
-  }
-  
-  .container article h2 {
-    margin: 0;
-    font-size: 20px;
-    overflow: hidden;
-    display: -webkit-box;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+  background-color: rgb(128, 128, 205);
+  row-gap: 20px;
 
-    text-overflow: ellipsis;
-    -webkit-box-orient: vertical;
-  }
-  
-  .container article p {
-    width: 100%;
-    font-size: 14px;
-    font-weight: 400;
-    overflow: hidden;
-    line-height: 1.5rem;
-    display: -webkit-box;
-    text-align: justify;
-  
-    word-break: keep-all;
+}
 
-    -webkit-box-orient: vertical;
-  }
-  
-  .container header div:first-child {
-    display: flex;
-    align-items: center;
-    margin: 7px 0px 12px 0px;
-    justify-content: space-between;
-  } 
-  
-  .container header div:first-child img {
-    margin: 0;
-    width: 32px;
-    height: 32px;
-    opacity: .8;
-    padding: 3px;
-    border-radius: 50%;
-    border: 1px solid var(--border);
-  }
-  
+.container a {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(210, 142, 41);
+  border-color: red;
+  border-width: 14px;
+  border-style: solid;     
+  padding: 8px;
+}
+
+.container h2 {
+  background-color: blueviolet;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 30px 10px 30px 20px;
+}
+
+.container p {
+  background-color: chartreuse;
+}
+
+.container h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: darkgreen;
+  padding: 20px;
+}
+
+/* .container img {
+  height: 10px;
+} */
