--- a/src/components/SpotList/SpotList.module.css
+++ b/src/components/SpotList/SpotList.module.css
@@ -1,45 +1,93 @@
 .container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding: 8px;
-  background-color: rgb(128, 128, 205);
-  row-gap: 20px;
-
+  width: 100%;
+  display: grid;
+  padding: 21px;
+  grid-template-columns: repeat(1, 1fr);
+  text-decoration: none;
+  gap: 18px;
 }
 
-.container a {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(210, 142, 41);
-  border-color: red;
-  border-width: 14px;
-  border-style: solid;     
-  padding: 8px;
+.header h1 {
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  font-size: 20px;
+  color: black;
+  font-size: 35px;
 }
 
-.container h2 {
-  background-color: blueviolet;
+.container article {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  padding: 30px 10px 30px 20px;
+  background-color: #001025;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  width: 100%;
+  height: 220px;
+  padding: 14px 21px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 
+              0 6px 20px rgba(0, 0, 0, 0.1); 
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.container p {
-  background-color: chartreuse;
+.container article header {
+  margin-bottom: 14px;
 }
 
-.container h1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: darkgreen;
-  padding: 20px;
+.container article header p {
+  text-align: center;
 }
 
-/* .container img {
-  height: 10px;
-} */
+.container article:hover {
+  transform: translateY(-1px); 
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2), 
+              0 10px 30px rgba(0, 0, 0, 0.2); 
+  cursor: pointer; 
+}
+
+.container article h2 {
+  margin: 0;
+  font-size: 45px;
+  overflow: hidden;
+  display: -webkit-box;
+  margin-bottom: 3px;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+} 
+
+.container article a {
+  text-decoration: none;;
+}
+
+.container article:hover {
+  color: #bc002f;
+  cursor: pointer
+}
+
+h2:hover {
+    cursor: pointer;
+    color: rgb(154, 16, 16);
+  }
+
+  
+@media only screen and (min-width: 900px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media only screen and (min-width: 1500px) {
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
