--- a/src/components/GuestForm/GuestForm.module.css
+++ b/src/components/GuestForm/GuestForm.module.css
@@ -1,5 +1,45 @@
 /* src/components/CommentForm/CommentForm.module.css */
 
+/* src/components/CommentForm/CommentForm.module.css */
 
-  
-  
+.container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 30px;
+    width: 440px;
+    height: 620px;
+    background-color: #bc002f;
+    color: black;
+    font-size: 20px;
+    background-color: var(--card-background);
+ 
+    -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+    -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+    box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+    margin-bottom: 1px;
+    margin-top: 40px;
+}
+
+.guestFormContainer {
+    background-color: blue;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 30px;
+    width: 440px;
+    height: 620px;
+    background-color: #bc002f;
+    color: black;
+    font-size: 20px;
+    background-color: var(--card-background);
+ 
+    -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+    -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+    box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+    margin-bottom: 1px;
+    margin-top: 40px;
+
+}
+
+
+
