--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -2,27 +2,33 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    background-color: blue;
+    /* align-items: center; 
     justify-content: flex-start; 
     background-color: #f8f9fa;
-    padding: 20px;
+    padding: 20px; */
   }
   
-  .container .splash {
+
+
+  .splash {
     display: flex;
-    flex-direction: center;
+    background-color: yellow;
+    /* flex-direction: center;
     justify-content: center;
     text-align: center;
     padding: 50px 0px 30px 0px;
+  } */
   }
   
-  .container .about {
+  .about {
     display: flex;
-    flex-direction: center;
+    background-color: aqua;
+    /* flex-direction: center;
     justify-content: center;
     text-align: center;
     padding: 15px 50px;
-    text-align: center;
+    text-align: center; */
     
   }
   
