--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -3,7 +3,7 @@
 .container {
   min-height: 100vh;
   display: flex;
-  background-color: aqua;
+  /* background-color: aqua; */
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -13,22 +13,34 @@
   .header {
     justify-content:flex-end; 
     display: flex;
-    background-color: yellowgreen;
+    /* background-color: yellowgreen; */
     justify-content: center;
     align-items: center;
-    padding: 25px 30px 20px 30px;
+    padding: 40px 30px 0px 40px;
+  }
+
+  .container section h1 {
+    color: #bc002f;
+  }
+
+  .container section h3 {
+    color: black;
+  }
+
+  .container section p {
+    /* background-color: deeppink; */
+    margin-bottom: 10px;
   }
 
 .about {
   display: flex;
-  background-color: darkmagenta;
+  /* background-color: darkmagenta; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px 30px 20px 60px;
+  padding: 20px 30px 20px 60px;
   text-align: center;
 }
-
 
 .joinNowButton {
   display: inline-block;
@@ -43,7 +55,8 @@
   font-weight: bold;
   cursor: pointer; 
   transition: background-color 0.3s ease; 
-  margin: 25px;
+  margin-top: 25px;
+  margin-bottom: 40px;
 }
 
 .joinNowButton:hover {
@@ -54,13 +67,17 @@
 .testimonial {
   width: 100vw; 
   height: auto; 
-  background-color: #bc002f; 
-  padding: 20px 0px 70px 0px; 
+  background-color: #f0f0f0;
+  padding: 20px 0px 70px 20px; 
   display: flex;
   flex-direction: column;
   align-items: center; 
   justify-content: center;
   box-sizing: border-box; 
+  border: 1px solid rgb(220, 220, 220);
+  -moz-box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.25);
+  box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.25);
 }
 
 .testimonial > header {
@@ -68,7 +85,7 @@
   padding: 10px 0px;
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   flex-direction: column;
   font-size: 18px;
 }
@@ -84,13 +101,10 @@
   background-color: #f2f5f7;
   padding: 12px 28px 14px 28px;
   border: 1px solid rgb(220, 220, 220);
- 
   -moz-box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.25);
-
   box-shadow: -1px 5px 19px -5px rgba(0, 0, 0, 0.25);
 }
-
 
 .testimonial article * {
   margin: 5px;
