--- a/src/components/SpotDetails/SpotDetails.module.css
+++ b/src/components/SpotDetails/SpotDetails.module.css
@@ -28,7 +28,6 @@
     height: 420px;
     border: 1px solid var(--border);
   background-color: var(--card-background);
- 
   -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
@@ -58,13 +57,20 @@
 }
 
 .guestList {
-    background-color: #bc002f;
+    background-color: white;
     display: flex;
     width: 440px;
     flex-direction: column;
     padding: 40px 30px;
     margin-top: 1px;
+    border: 1px solid var(--border);
+  background-color: var(--card-background);
+  -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
     margin-bottom: 20px;
+    box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
+  margin-bottom: 1px;
 
 }
 
