--- a/src/components/SpotDetails/SpotDetails.module.css
+++ b/src/components/SpotDetails/SpotDetails.module.css
@@ -16,23 +16,23 @@
     display: flex;
     flex-direction: column;
     padding: 60px;
-
 }
   
 
 .card {
     display: flex;
+    /* background-color: aqua; */
     flex-direction: column;
-    width: 440px;
-    padding: 35px 20px;
-    height: 420px;
+    width: 430px;
+    padding: 30px 30px;
+    height: 370px;
     border: 1px solid var(--border);
   background-color: var(--card-background);
   -moz-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   -webkit-box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   box-shadow: -1px 5px 19px -5px rgba(0,0,0,0.25);
   margin-bottom: 1px;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .button-link:hover {
@@ -42,7 +42,11 @@
 
 
 .container header article p {
-    padding: 5px;
+  display: flex;
+  background-color: aqua;
+  padding: 1px;
+  margin: 2px;
+  background-color: rgb(234, 234, 204);
 }
 
 
@@ -82,8 +86,26 @@
     margin-top: 40px;
     padding: 20px;
     border-radius: 15px;
+}
 
+.editButton {
+  display: inline-block;
+  width: 20%;
+  padding: 8px 8px;
+  color: black;
+  background-color: white;
+  border: 1px solid black;
+  text-decoration: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  text-align: center;
+  margin-top: 17px;
+}
 
-
+.editButton:hover {
+  cursor: pointer;
+  background-color: #cda780;
+  color:white;
 }
 
